--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Power-Strings.json
@@ -51,5 +51,12 @@
     "DESCRIPTIONS": [
       "If you would gain Intoxication, gain a stack of Regen instead."
     ]
+  },
+  "theBrewmaster:DionysianFormPower": {
+    "NAME": "Dionysian Form",
+    "DESCRIPTIONS": [
+      "At the beggining of your turn, add a random Brew card into your hand. It costs 0.",
+      "At the beggining of your turn, add a random upgraded Brew card into your hand. It costs 0."
+    ]
   }
 }
