Spirit Helmet Rebalance

--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Relic-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Relic-Strings.json
@@ -10,7 +10,7 @@
     "NAME": "Spirit Helmet",
     "FLAVOR": "I've never heard of one drinks too many.",
     "DESCRIPTIONS": [
-      "If you would gain Intoxication, gain twice that amount instead."
+      "Whenever you would gain Intoxication, gain 150% that amount instead."
     ]
   }
 }
