--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Card-Strings.json
@@ -202,5 +202,9 @@
   "theBrewmaster:BodySlam": {
     "NAME": "Body Slam",
     "DESCRIPTION": "Deal !D! damage. NL Apply !M! Weak."
+  },
+  "theBrewmaster:TipsyStrike": {
+    "NAME": "Tipsy Strike",
+    "DESCRIPTION": "Deal !D! damage. NL Shuffle a Void into your discard pile."
   }
 }
