--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Power-Strings.json
@@ -49,7 +49,8 @@
   "theBrewmaster:TemperancePower": {
     "NAME": "Temperance",
     "DESCRIPTIONS": [
-      "If you would gain Intoxication, gain a stack of Regen instead."
+      "If you would gain Intoxication, gain ",
+      " Strength instead."
     ]
   },
   "theBrewmaster:DionysianFormPower": {
@@ -86,5 +87,10 @@
       " Intoxication."
     ]
   },
+  "theBrewmaster:NoIntoxicationPower": {
+    "NAME": "No Intoxication",
+    "DESCRIPTIONS": [
+      "You can't gain Intoxication."
+    ]
   }
 }
