Fix relix add...again

--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Relic-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Relic-Strings.json
@@ -34,7 +34,7 @@
       "You can Relax at Rest Sites. Starting your next combat with an additional 50 Intoxication."
     ]
   },
-  "theBrewmaster:EthanolFlask": {
+  "theBrewmaster:EthanolFlaskRelic": {
     "NAME": "Ethanol Flask",
     "FLAVOR": "A lot of bad people made a lot of good money with this stuff.",
     "DESCRIPTIONS": [
