--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Card-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Card-Strings.json
@@ -258,7 +258,7 @@
   },
   "theBrewmaster:DetonatorStrike": {
     "NAME": "Detonator Strike",
-    "DESCRIPTION": "Deal !M!x amount of thebrewmaster:Drenched as damage."
+    "DESCRIPTION": "Deal !M! times the amount of thebrewmaster:Drenched as damage."
   },
   "theBrewmaster:DrunkenBrawler": {
     "NAME": "Drunken Brawler",
