--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Card-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Card-Strings.json
@@ -192,8 +192,7 @@
   },
   "theBrewmaster:DionysianForm": {
     "NAME": "Dionysian Form",
-    "DESCRIPTION": "At the beggining of your turn, add a random Brew card into your hand. It costs 0 this turn.",
-    "UPGRADE_DESCRIPTION": "At the beggining of your turn, add a random upgraded Brew card into your hand. It costs 0 this turn."
+    "DESCRIPTION": "Whenever you play a Brew card, play a copy of each brew card you played before it this turn."
   },
   "theBrewmaster:DrunkenRage": {
     "NAME": "Drunken Rage",
